<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginBottom="5dp"
        android:background="@color/teal"
        android:textColor="@color/white"
        android:text="@string/header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/input_label_text" />

    <EditText
        android:id="@+id/item_input"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_container_height"
        android:layout_marginBottom="5dp"
        android:autofillHints="autofill"
        android:background="@color/white"
        android:textColor="@color/black"
        android:hint="@string/item_input_placeholder"
        android:inputType="text" />

    <Button
        android:id="@+id/where_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/chrome_green"
        android:text="@string/where_button_text" />

</LinearLayout>